Fixed: More display errors with new admin header when using menu in collapsed mode.
git-svn-id: https://plugins.svn.wordpress.org/ui-labs/trunk@410519 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/2-adminbar.css
+++ b/2-adminbar.css
@@ -49,5 +49,8 @@
 
 /*collapsed menu styles*/
 .js.folded #wpcontent, .js.folded #footer {
-	margin-left:34px;
+	margin-left:33px;
+}
+.js.folded #wphead {
+	height:30px;
 }
